# sulla-audio

./: .gitignore  CMakeLists.txt  README.md  install.sh
.github/workflows/: build-release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  PROTOCOL.md
include/sulla/: AudioBuffer.h  AudioChunk.h  AudioDevice.h  AudioFormat.h  AudioMirrorManager.h  AuthCredentials.h  CaptureController.h  CaptureState.h  DeviceController.h  DriverConfig.h  DriverController.h  FormatConverter.h  GatewaySession.h  IAuthClient.h  ICaptureBackend.h  IDeviceEnumerator.h  IGatewayClient.h  ILocalTransport.h  Logger.h  MediaKeyListener.h  PlatformDetector.h  Resampler.h  RingBuffer.h
installer/macos/: build-loopback-driver.sh  create-multi-output.swift  install.sh
installer/windows/: install.bat
src/: main.cpp
src/platform/: PlatformFactory.cpp  UnixSocketTransport.h
src/platform/macos/: CoreAudioCaptureBackend.h  CoreAudioDeviceEnumerator.h
src/platform/windows/: WasapiCaptureBackend.h  WasapiDeviceEnumerator.h
tests/: test_AudioBuffer.cpp  test_AudioChunk.cpp  test_AudioFormat.cpp  test_AuthCredentials.cpp  test_DeviceController.cpp  test_DriverConfig.cpp  test_FormatConverter.cpp  test_GatewaySession.cpp  test_Logger.cpp  test_Resampler.cpp  test_RingBuffer.cpp
